--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -382,7 +382,7 @@ h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/hero-bg-my.jpg") top center;
   background-size: cover;
   position: relative;
 }
