--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,12 @@ body {
 }
 
 a {
-  color: #ffc107;
+  color: #47b31d;
   text-decoration: none;
 }
 
 a:hover {
-  color: #ffce3a;
+  color: #9aeb7a;
   text-decoration: none;
 }
 
