FAQ hover color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1299,7 +1299,7 @@ margin-top: 82px;
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #ffc107;
+  color: #9aeb7a;
 }
 
 .faq .faq-list a.collapsed .icon-show {
